Initial setup lab_9

--- a/project_2/body.html
+++ b/project_2/body.html
@@ -1,4 +1,6 @@
-    <p class="lead">BMI Calculator</p>
+    <div style="PADDING-LEFT:15px">
+        <h1>BMI Calculator</h1>
+    </div>
     <hr>
     <form method="post" action="<?= $_SERVER['PHP_SELF'] ?>">
         <div class="col-xs-2">
