Changed method from POST to GET in project_2

--- a/project_2/body.html
+++ b/project_2/body.html
@@ -2,7 +2,7 @@
         <h1>BMI Calculator</h1>
     </div>
     <hr>
-    <form method="post" action="<?= $_SERVER['PHP_SELF'] ?>">
+    <form method="get" action="<?= $_SERVER['PHP_SELF'] ?>">
         <div class="col-xs-2">
             <label for="user_weight">Enter a weight (in pounds):</label>
             <input class="form-control" type="text" id="user_weight"
