--- a/project_2/header.html
+++ b/project_2/header.html
@@ -4,5 +4,7 @@
     <title>Project 2 - BMI Calculator</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" type="text/css" href="bootstrap.min.css" />
+    <script src="js/jquery-1.11.3.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
 </head>
 <body>
