Adding sticky footer and staging post delete function

--- a/project_3/footer.html
+++ b/project_3/footer.html
@@ -1,2 +1,7 @@
+    <div class="panel-footer footer">
+         <footer class="container">
+             &copy; Copyright 2015 Bob Schmitz III
+         </footer>
+    </div>
 </body>
 </html>
