--- a/project_3/footer.html
+++ b/project_3/footer.html
@@ -3,5 +3,9 @@
              &copy; Copyright 2015 Bob Schmitz III
          </footer>
     </div>
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="js/jquery-1.11.3.min.js"></script>
+    <!-- Include all compiled plugins -->
+    <script src="js/bootstrap.min.js"></script>
 </body>
 </html>
