--- a/project_4/header.html
+++ b/project_4/header.html
@@ -12,7 +12,13 @@
 <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
         <div class="navbar-header">
-            <a class="navbar-brand" href="<?= $_SERVER['SITE_ROOT'] ?>">Project 4</a>
+            <a class="navbar-brand" href="#">Project 4</a>
         </div>
+        <form class="navbar-form navbar-left" method="get" action="flickr.php" role="search">
+            <div class="form-group">
+                <input type="text" name="tag" class="form-control" placeholder="Search">
+            </div>
+            <button type="submit" class="btn btn-default">Submit</button>
+        </form>
     </div>
 </nav>
